--- a/index.html
+++ b/index.html
@@ -18,8 +18,19 @@
   <body>
     <div class="container">
       <header>
-        <h1>Nike</h1>
+        <h1>ShoeGallery</h1>
         <div class="links">
+          <a href="#">Home</a>
+          <a href="#">Produtos</a>
+          <a href="#">Sobre</a>
+        </div>
+
+        <div class="menu">
+          <i id="open-modal" class="fa-solid fa-bars"></i>
+        </div>
+
+        <div class="modal">
+          <i id="close-modal" class="fa-solid fa-xmark"></i>
           <a href="#">Home</a>
           <a href="#">Produtos</a>
           <a href="#">Sobre</a>
